parsertest/pc4/parcialBase.output
Gramática

    0 $accept: programa $end

    1 programa: listaclases

    2 listaclases: clase listaclases
    3            | clase

    4 clase: CLASE ID CI listaatributos constructor listametodos CD
    5      | CLASE ID HEREDA ID CI listaatributos constructor listametodos CD

    6 listaatributos: atributo PCOMA listaatributos
    7               | atributo PCOMA

    8 atributo: type ID

    9 constructor: ID PI listavar PD CI listainicializacion CD

   10 listavar: type ID COMA listavar
   11         | type ID COMA

   12 listainicializacion: inicializacion PCOMA listainicializacion
   13                    | inicializacion PCOMA

   14 inicializacion: ID IGUAL NUM

   15 listametodos: metodo listametodos
   16             | metodo

   17 metodo: type ID PI listavar PD CI asignaciones CD

   18 asignaciones: asignacion PCOMA asignaciones
   19             | asignacion PCOMA

   20 asignacion: ID IGUAL expresion

   21 expresion: expresion MAS termino
   22          | expresion MENOS termino
   23          | termino

   24 termino: termino POR factor
   25        | termino ENTRE factor
   26        | factor

   27 factor: NUM
   28       | ID
   29       | PI expresion PD

   30 type: VAR


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
CLASE (258) 4 5
ID (259) 4 5 8 9 10 11 14 17 20 28
IGUAL (260) 14 20
VAR (261) 30
NUM (262) 14 27
MAS (263) 21
MENOS (264) 22
POR (265) 24
ENTRE (266) 25
PCOMA (267) 6 7 12 13 18 19
COMA (268) 10 11
PI (269) 9 17 29
PD (270) 9 17 29
CI (271) 4 5 9 17
CD (272) 4 5 9 17
HEREDA (273) 5


No terminales con las reglas donde aparecen

$accept (19)
    en la izquierda: 0
programa (20)
    en la izquierda: 1, en la derecha: 0
listaclases (21)
    en la izquierda: 2 3, en la derecha: 1 2
clase (22)
    en la izquierda: 4 5, en la derecha: 2 3
listaatributos (23)
    en la izquierda: 6 7, en la derecha: 4 5 6
atributo (24)
    en la izquierda: 8, en la derecha: 6 7
constructor (25)
    en la izquierda: 9, en la derecha: 4 5
listavar (26)
    en la izquierda: 10 11, en la derecha: 9 10 17
listainicializacion (27)
    en la izquierda: 12 13, en la derecha: 9 12
inicializacion (28)
    en la izquierda: 14, en la derecha: 12 13
listametodos (29)
    en la izquierda: 15 16, en la derecha: 4 5 15
metodo (30)
    en la izquierda: 17, en la derecha: 15 16
asignaciones (31)
    en la izquierda: 18 19, en la derecha: 17 18
asignacion (32)
    en la izquierda: 20, en la derecha: 18 19
expresion (33)
    en la izquierda: 21 22 23, en la derecha: 20 21 22 29
termino (34)
    en la izquierda: 24 25 26, en la derecha: 21 22 23 24 25
factor (35)
    en la izquierda: 27 28 29, en la derecha: 24 25 26
type (36)
    en la izquierda: 30, en la derecha: 8 10 11 17


estado 0

    0 $accept: . programa $end

    CLASE  desplazar e ir al estado 1

    programa     ir al estado 2
    listaclases  ir al estado 3
    clase        ir al estado 4


estado 1

    4 clase: CLASE . ID CI listaatributos constructor listametodos CD
    5      | CLASE . ID HEREDA ID CI listaatributos constructor listametodos CD

    ID  desplazar e ir al estado 5


estado 2

    0 $accept: programa . $end

    $end  desplazar e ir al estado 6


estado 3

    1 programa: listaclases .

    $default  reduce usando la regla 1 (programa)


estado 4

    2 listaclases: clase . listaclases
    3            | clase .

    CLASE  desplazar e ir al estado 1

    $default  reduce usando la regla 3 (listaclases)

    listaclases  ir al estado 7
    clase        ir al estado 4


estado 5

    4 clase: CLASE ID . CI listaatributos constructor listametodos CD
    5      | CLASE ID . HEREDA ID CI listaatributos constructor listametodos CD

    CI      desplazar e ir al estado 8
    HEREDA  desplazar e ir al estado 9


estado 6

    0 $accept: programa $end .

    $default  aceptar


estado 7

    2 listaclases: clase listaclases .

    $default  reduce usando la regla 2 (listaclases)


estado 8

    4 clase: CLASE ID CI . listaatributos constructor listametodos CD

    VAR  desplazar e ir al estado 10

    listaatributos  ir al estado 11
    atributo        ir al estado 12
    type            ir al estado 13


estado 9

    5 clase: CLASE ID HEREDA . ID CI listaatributos constructor listametodos CD

    ID  desplazar e ir al estado 14


estado 10

   30 type: VAR .

    $default  reduce usando la regla 30 (type)


estado 11

    4 clase: CLASE ID CI listaatributos . constructor listametodos CD

    ID  desplazar e ir al estado 15

    constructor  ir al estado 16


estado 12

    6 listaatributos: atributo . PCOMA listaatributos
    7               | atributo . PCOMA

    PCOMA  desplazar e ir al estado 17


estado 13

    8 atributo: type . ID

    ID  desplazar e ir al estado 18


estado 14

    5 clase: CLASE ID HEREDA ID . CI listaatributos constructor listametodos CD

    CI  desplazar e ir al estado 19


estado 15

    9 constructor: ID . PI listavar PD CI listainicializacion CD

    PI  desplazar e ir al estado 20


estado 16

    4 clase: CLASE ID CI listaatributos constructor . listametodos CD

    VAR  desplazar e ir al estado 10

    listametodos  ir al estado 21
    metodo        ir al estado 22
    type          ir al estado 23


estado 17

    6 listaatributos: atributo PCOMA . listaatributos
    7               | atributo PCOMA .

    VAR  desplazar e ir al estado 10

    $default  reduce usando la regla 7 (listaatributos)

    listaatributos  ir al estado 24
    atributo        ir al estado 12
    type            ir al estado 13


estado 18

    8 atributo: type ID .

    $default  reduce usando la regla 8 (atributo)


estado 19

    5 clase: CLASE ID HEREDA ID CI . listaatributos constructor listametodos CD

    VAR  desplazar e ir al estado 10

    listaatributos  ir al estado 25
    atributo        ir al estado 12
    type            ir al estado 13


estado 20

    9 constructor: ID PI . listavar PD CI listainicializacion CD

    VAR  desplazar e ir al estado 10

    listavar  ir al estado 26
    type      ir al estado 27


estado 21

    4 clase: CLASE ID CI listaatributos constructor listametodos . CD

    CD  desplazar e ir al estado 28


estado 22

   15 listametodos: metodo . listametodos
   16             | metodo .

    VAR  desplazar e ir al estado 10

    $default  reduce usando la regla 16 (listametodos)

    listametodos  ir al estado 29
    metodo        ir al estado 22
    type          ir al estado 23


estado 23

   17 metodo: type . ID PI listavar PD CI asignaciones CD

    ID  desplazar e ir al estado 30


estado 24

    6 listaatributos: atributo PCOMA listaatributos .

    $default  reduce usando la regla 6 (listaatributos)


estado 25

    5 clase: CLASE ID HEREDA ID CI listaatributos . constructor listametodos CD

    ID  desplazar e ir al estado 15

    constructor  ir al estado 31


estado 26

    9 constructor: ID PI listavar . PD CI listainicializacion CD

    PD  desplazar e ir al estado 32


estado 27

   10 listavar: type . ID COMA listavar
   11         | type . ID COMA

    ID  desplazar e ir al estado 33


estado 28

    4 clase: CLASE ID CI listaatributos constructor listametodos CD .

    $default  reduce usando la regla 4 (clase)


estado 29

   15 listametodos: metodo listametodos .

    $default  reduce usando la regla 15 (listametodos)


estado 30

   17 metodo: type ID . PI listavar PD CI asignaciones CD

    PI  desplazar e ir al estado 34


estado 31

    5 clase: CLASE ID HEREDA ID CI listaatributos constructor . listametodos CD

    VAR  desplazar e ir al estado 10

    listametodos  ir al estado 35
    metodo        ir al estado 22
    type          ir al estado 23


estado 32

    9 constructor: ID PI listavar PD . CI listainicializacion CD

    CI  desplazar e ir al estado 36


estado 33

   10 listavar: type ID . COMA listavar
   11         | type ID . COMA

    COMA  desplazar e ir al estado 37


estado 34

   17 metodo: type ID PI . listavar PD CI asignaciones CD

    VAR  desplazar e ir al estado 10

    listavar  ir al estado 38
    type      ir al estado 27


estado 35

    5 clase: CLASE ID HEREDA ID CI listaatributos constructor listametodos . CD

    CD  desplazar e ir al estado 39


estado 36

    9 constructor: ID PI listavar PD CI . listainicializacion CD

    ID  desplazar e ir al estado 40

    listainicializacion  ir al estado 41
    inicializacion       ir al estado 42


estado 37

   10 listavar: type ID COMA . listavar
   11         | type ID COMA .

    VAR  desplazar e ir al estado 10

    $default  reduce usando la regla 11 (listavar)

    listavar  ir al estado 43
    type      ir al estado 27


estado 38

   17 metodo: type ID PI listavar . PD CI asignaciones CD

    PD  desplazar e ir al estado 44


estado 39

    5 clase: CLASE ID HEREDA ID CI listaatributos constructor listametodos CD .

    $default  reduce usando la regla 5 (clase)


estado 40

   14 inicializacion: ID . IGUAL NUM

    IGUAL  desplazar e ir al estado 45


estado 41

    9 constructor: ID PI listavar PD CI listainicializacion . CD

    CD  desplazar e ir al estado 46


estado 42

   12 listainicializacion: inicializacion . PCOMA listainicializacion
   13                    | inicializacion . PCOMA

    PCOMA  desplazar e ir al estado 47


estado 43

   10 listavar: type ID COMA listavar .

    $default  reduce usando la regla 10 (listavar)


estado 44

   17 metodo: type ID PI listavar PD . CI asignaciones CD

    CI  desplazar e ir al estado 48


estado 45

   14 inicializacion: ID IGUAL . NUM

    NUM  desplazar e ir al estado 49


estado 46

    9 constructor: ID PI listavar PD CI listainicializacion CD .

    $default  reduce usando la regla 9 (constructor)


estado 47

   12 listainicializacion: inicializacion PCOMA . listainicializacion
   13                    | inicializacion PCOMA .

    ID  desplazar e ir al estado 40

    $default  reduce usando la regla 13 (listainicializacion)

    listainicializacion  ir al estado 50
    inicializacion       ir al estado 42


estado 48

   17 metodo: type ID PI listavar PD CI . asignaciones CD

    ID  desplazar e ir al estado 51

    asignaciones  ir al estado 52
    asignacion    ir al estado 53


estado 49

   14 inicializacion: ID IGUAL NUM .

    $default  reduce usando la regla 14 (inicializacion)


estado 50

   12 listainicializacion: inicializacion PCOMA listainicializacion .

    $default  reduce usando la regla 12 (listainicializacion)


estado 51

   20 asignacion: ID . IGUAL expresion

    IGUAL  desplazar e ir al estado 54


estado 52

   17 metodo: type ID PI listavar PD CI asignaciones . CD

    CD  desplazar e ir al estado 55


estado 53

   18 asignaciones: asignacion . PCOMA asignaciones
   19             | asignacion . PCOMA

    PCOMA  desplazar e ir al estado 56


estado 54

   20 asignacion: ID IGUAL . expresion

    ID   desplazar e ir al estado 57
    NUM  desplazar e ir al estado 58
    PI   desplazar e ir al estado 59

    expresion  ir al estado 60
    termino    ir al estado 61
    factor     ir al estado 62


estado 55

   17 metodo: type ID PI listavar PD CI asignaciones CD .

    $default  reduce usando la regla 17 (metodo)


estado 56

   18 asignaciones: asignacion PCOMA . asignaciones
   19             | asignacion PCOMA .

    ID  desplazar e ir al estado 51

    $default  reduce usando la regla 19 (asignaciones)

    asignaciones  ir al estado 63
    asignacion    ir al estado 53


estado 57

   28 factor: ID .

    $default  reduce usando la regla 28 (factor)


estado 58

   27 factor: NUM .

    $default  reduce usando la regla 27 (factor)


estado 59

   29 factor: PI . expresion PD

    ID   desplazar e ir al estado 57
    NUM  desplazar e ir al estado 58
    PI   desplazar e ir al estado 59

    expresion  ir al estado 64
    termino    ir al estado 61
    factor     ir al estado 62


estado 60

   20 asignacion: ID IGUAL expresion .
   21 expresion: expresion . MAS termino
   22          | expresion . MENOS termino

    MAS    desplazar e ir al estado 65
    MENOS  desplazar e ir al estado 66

    $default  reduce usando la regla 20 (asignacion)


estado 61

   23 expresion: termino .
   24 termino: termino . POR factor
   25        | termino . ENTRE factor

    POR    desplazar e ir al estado 67
    ENTRE  desplazar e ir al estado 68

    $default  reduce usando la regla 23 (expresion)


estado 62

   26 termino: factor .

    $default  reduce usando la regla 26 (termino)


estado 63

   18 asignaciones: asignacion PCOMA asignaciones .

    $default  reduce usando la regla 18 (asignaciones)


estado 64

   21 expresion: expresion . MAS termino
   22          | expresion . MENOS termino
   29 factor: PI expresion . PD

    MAS    desplazar e ir al estado 65
    MENOS  desplazar e ir al estado 66
    PD     desplazar e ir al estado 69


estado 65

   21 expresion: expresion MAS . termino

    ID   desplazar e ir al estado 57
    NUM  desplazar e ir al estado 58
    PI   desplazar e ir al estado 59

    termino  ir al estado 70
    factor   ir al estado 62


estado 66

   22 expresion: expresion MENOS . termino

    ID   desplazar e ir al estado 57
    NUM  desplazar e ir al estado 58
    PI   desplazar e ir al estado 59

    termino  ir al estado 71
    factor   ir al estado 62


estado 67

   24 termino: termino POR . factor

    ID   desplazar e ir al estado 57
    NUM  desplazar e ir al estado 58
    PI   desplazar e ir al estado 59

    factor  ir al estado 72


estado 68

   25 termino: termino ENTRE . factor

    ID   desplazar e ir al estado 57
    NUM  desplazar e ir al estado 58
    PI   desplazar e ir al estado 59

    factor  ir al estado 73


estado 69

   29 factor: PI expresion PD .

    $default  reduce usando la regla 29 (factor)


estado 70

   21 expresion: expresion MAS termino .
   24 termino: termino . POR factor
   25        | termino . ENTRE factor

    POR    desplazar e ir al estado 67
    ENTRE  desplazar e ir al estado 68

    $default  reduce usando la regla 21 (expresion)


estado 71

   22 expresion: expresion MENOS termino .
   24 termino: termino . POR factor
   25        | termino . ENTRE factor

    POR    desplazar e ir al estado 67
    ENTRE  desplazar e ir al estado 68

    $default  reduce usando la regla 22 (expresion)


estado 72

   24 termino: termino POR factor .

    $default  reduce usando la regla 24 (termino)


estado 73

   25 termino: termino ENTRE factor .

    $default  reduce usando la regla 25 (termino)
